; ModuleID = '/home/carl/AnghaBench/freebsd/sys/dev/glxiic/extr_glxiic.c_glxiic_smb_disable.c'
source_filename = "/home/carl/AnghaBench/freebsd/sys/dev/glxiic/extr_glxiic.c_glxiic_smb_disable.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.glxiic_softc = type { i32 }

@GLXIIC_SMB_CTRL2 = common dso_local global i32 0, align 4
@GLXIIC_SMB_CTRL2_EN_BIT = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.glxiic_softc*)* @glxiic_smb_disable to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @glxiic_smb_disable(%struct.glxiic_softc* %0) #0 {
  %2 = alloca %struct.glxiic_softc*, align 8
  %3 = alloca i32, align 4
  store %struct.glxiic_softc* %0, %struct.glxiic_softc** %2, align 8
  %4 = load %struct.glxiic_softc*, %struct.glxiic_softc** %2, align 8
  %5 = getelementptr inbounds %struct.glxiic_softc, %struct.glxiic_softc* %4, i32 0, i32 0
  %6 = load i32, i32* %5, align 4
  %7 = load i32, i32* @GLXIIC_SMB_CTRL2, align 4
  %8 = call i32 @bus_read_2(i32 %6, i32 %7)
  store i32 %8, i32* %3, align 4
  %9 = load %struct.glxiic_softc*, %struct.glxiic_softc** %2, align 8
  %10 = getelementptr inbounds %struct.glxiic_softc, %struct.glxiic_softc* %9, i32 0, i32 0
  %11 = load i32, i32* %10, align 4
  %12 = load i32, i32* @GLXIIC_SMB_CTRL2, align 4
  %13 = load i32, i32* %3, align 4
  %14 = load i32, i32* @GLXIIC_SMB_CTRL2_EN_BIT, align 4
  %15 = xor i32 %14, -1
  %16 = and i32 %13, %15
  %17 = call i32 @bus_write_2(i32 %11, i32 %12, i32 %16)
  ret void
}

declare dso_local i32 @bus_read_2(i32, i32) #1

declare dso_local i32 @bus_write_2(i32, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
